[package]
name = "ap-storage-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
ap-storage = { path = "../ap-storage" }
anyhow = { version = "1.0.75", default-features = false }
