[package]
name = "ap-storage-examples"
description = "Example Linux applications for the ap-storage-* filessystems."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"

[dependencies]
al-crunch-pool = { git = "https://github.com/alpico/linux.pico.git" }
al-mmap = { git = "https://github.com/alpico/linux.pico.git" }
ap-storage = { path="../ap-storage" }
ap-storage-ext4-ro = { path="../ap-storage-ext4-ro" }
ap-storage-linux = { path="../ap-storage-linux" }
ap-storage-memory = { path="../ap-storage-memory" }
ap-storage-unified = { path="../ap-storage-unified" }
ap-storage-vfat = { path="../ap-storage-vfat" }
ap-storage-vfat-mkfs = { path="../ap-storage-vfat-mkfs" }
gumdrop = "0.8.1"
