[package]
name = "ap-storage-ext4-ro"
description = "Read-only access to the ext{2,3,4} filesystems."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"

[dependencies]
ap-storage={ path = "../ap-storage"}
ap-storage-ext4={ path = "../ap-storage-ext4"}
ap-util-slice-writer={ path = "../ap-util-slice-writer"}


[features]
default = ["file_extents", "file_blocks"]
file_extents = []
file_blocks = []

[package.metadata.cargo-all-features]
