[package]
name = "ap-storage-json"
description = "Using JSON as backing store of a filesystem."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"

[dependencies]
serde = { version = "1.0.192", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.108", default-features = false, features = ["alloc"] }
ap-storage = { path = "../ap-storage" }
ap-util-slice-writer={ path = "../ap-util-slice-writer"}
