[package]
name = "ap-storage-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ap-storage = { path="../ap-storage" }
libc = "0.2.149"

[dev-dependencies]
gumdrop = "0.8.1"
ap-storage-ext4-ro = { path="../ap-storage-ext4-ro" }
ap-storage-vfat = { path="../ap-storage-vfat" }
ap-storage-unified = { path="../ap-storage-unified" }
ap-storage-memory = { path="../ap-storage-memory" }
al-mmap = { git = "https://github.com/alpico/linux.pico.git" }
al-crunch-pool = { git = "https://github.com/alpico/linux.pico.git" }
