[package]
name = "ap-storage-linux"
description = "Linux specific ap-storage implementations."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"

[dependencies]
anyhow = { version = "1.0.75" }
ap-storage = { path="../ap-storage" }
libc = { version = "0.2.149", default-features = false }
