[package]
name = "ap-storage-partition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
ap-storage = { path = "../ap-storage"}
ap-util-slice-writer = { path = "../ap-util-slice-writer"}