[package]
name = "ap-storage-unified"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ap-storage = { path = "../ap-storage" }
ap-storage-ext4-ro = { path = "../ap-storage-ext4-ro" }
ap-storage-json = { path = "../ap-storage-json" }
ap-storage-vfat-ro = { path = "../ap-storage-vfat-ro" }
ap-storage-partition = { path = "../ap-storage-partition" }
