[package]
name = "ap-storage-unified"
description = "Unify all ap-storage-* filesystems by wrapping them into an enum."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"

[dependencies]
ap-storage = { path = "../ap-storage" }
ap-storage-ext4-ro = { path = "../ap-storage-ext4-ro" }
ap-storage-json = { path = "../ap-storage-json" }
ap-storage-vfat-ro = { path = "../ap-storage-vfat-ro" }
ap-storage-partition = { path = "../ap-storage-partition" }
