[package]
name = "ap-storage-vfat-ro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", default-features = false }
ap-storage={ path = "../ap-storage"}
ap-storage-vfat={ path = "../ap-storage-vfat"}
