[package]
name = "ap-storage-vfat-ro"
description = "Read-only access to a FAT disk."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"


[dependencies]
ap-storage={ path = "../ap-storage"}
ap-util-slice-writer={ path = "../ap-util-slice-writer"}
ap-storage-vfat={ path = "../ap-storage-vfat"}

[features]
default=["long-name"]
long-name = []