[package]
name = "ap-storage-vfat-test"
description = "End-to-end tests for the ap-storage-vfat-* crates."
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/alpico/storage.pico"

[dev-dependencies]
ap-storage-vfat={ path = "../ap-storage-vfat"}
ap-storage-vfat-mkfs={ path = "../ap-storage-vfat-mkfs"}
